Update index.html ei

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body style="margin:0px; overflow:hidden;">
     <a-scene embedded arjs>
       <a-assets>
-        <!-- <a-asset-item id="ei" src="human.glb" scale="1 1 1"></a-asset-item> -->
+        <a-asset-item id="ei" src="human.glb" scale="1 1 1"></a-asset-item>
         <!-- <video id="wave" src="./wave.mp4" loop="true"></video> -->
       </a-assets>
       <a-marker preset="hiro">
-        <!-- <a-entity gltf-model="#ei" rotation="-90 0 0"></a-entity> -->
-        <a-box position="0 0.5 0" wireframe="true"></a-box>
+        <a-entity gltf-model="#ei" rotation="-90 0 0"></a-entity>
+<!--         <a-box position="0 0.5 0" wireframe="true"></a-box> -->
         <!-- <a-video src="#wave" width="8" height="4.5" position="0 3 -9"></a-video> -->
       </a-marker>
       <a-entity camera></a-entity>
