--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <a-entity camera></a-entity>
     </a-scene>
   </body>
-  <!-- <script>
+  <script>
     //glTFの表示が暗くなる問題に対処
     document.querySelector("a-scene").renderer.gammaOutput=true;
-  </script> -->
+  </script>
 </html>
