--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <a-scene embedded arjs>
       <a-assets>
         <a-asset-item id="ei" src="human.glb" scale="1 1 1"></a-asset-item>
+        <img id="twitter" src="./assets/twitter.png">
+        <img id="instagram" src="./assets/instagram.webp">
+        <img id="github" src="./assets/github.png">
         <!-- <video id="wave" src="./wave.mp4" loop="true"></video> -->
       </a-assets>
       <a-marker preset="hiro">
