--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+	  <script src="./main.js"></script>
   </head>
 
   <body style="margin:0px; overflow:hidden;">
