--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img id="github" src="./assets/github.png">
         <!-- <video id="wave" src="./wave.mp4" loop="true"></video> -->
       </a-assets>
-      <a-marker preset="hiro">
+      <a-marker type"pattern" url="./pattern-surfin.patt">
         <a-entity cursor="rayOrigin: mouse"></a-entity>
         <!-- <a-entity camera></a-entity> -->
         <a-cylinder position="-2 1 -1.5" radius="1" height="2.5" opacity="0.5" rotation="0 0 0" material="opacity: 0.0; transparent: true" 
